--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div id="apodCopyright"></div>
 <div id="apodDate"></div>
 <div id="apodDesc"></div>
-
+<button id="btnRandApod">Click me</button>
     <script src="./dist/js/main.js"></script>
   </body>
 </html>
